verifyEmail api
